TODO.txt expanded

--- a/ChatLoaderAPI/ChatLoaderAPI/TODO.txt
+++ b/ChatLoaderAPI/ChatLoaderAPI/TODO.txt
@@ -7,6 +7,8 @@
 3) какие конкретно запросы может принимать api? скачать сообщения по номеру - один номер или диапазон?
 скачать по дате - одна дата или диапазон? я пока сделал один номер, но диапазон дат, потом если что поменяю
 
+адреса ручек в url тоже надо как-то согласовать
+
 4) для удобства введения даты разбил дату на год-день-месяц (отдельные окошки в сваггере), но тогда ломается url
 либо мне надо будет собирать url руками, либо тебе распаршивать то, что есть
 пример: /ChatLoader/download/date?channelHandle=fghj&StartDate.Year=1&StartDate.Month=142&StartDate.Day=1&EndDate.Year=1&EndDate.Month=1&EndDate.Day=1
@@ -33,3 +35,5 @@ alter table requests
 6) вопрос с тем, как (и по каким входным данным от пользователя) по-умному доставать ответ (ручка show - пока она пустая)
 
 7) добавить документацию в сваггер
+
+8) исправить Dockerfile, а то Rider, скорее всего, опять склепал неправильный
