two handlers added

--- a/ChatLoaderAPI/TODO.txt
+++ b/ChatLoaderAPI/TODO.txt
@@ -6,11 +6,11 @@
 В xml-комментах и в description для swagger'а пока просто заглушки, 
 со временем можно будет туда написать что-то содержательное.
 
-Ручка show-messages пишет в базу запрос, потом ждёт секунду (в dev окружении 10 секунд)
-и выдаёт значение поля answer из той же строки. Мб не слишком умно, но пока так
+Ручки show-messages и get-all-channnels пишут в базу запрос, потом ждут секунду (в dev окружении 10 секунд)
+и выдают значение поля answer из той же строки. Мб не слишком умно, но пока так
 
 Очень надеюсь, что не будет проблем с подключением к базе данных...
 
-4) даты - пока не актуально, но потом надо будет подумать (+ обработка неправильных)
-
-В будущем надо будет дописать как минимум ручку с выводом списка тг-каналов с номерами.
+Даты в swagger вводятся в формате dd.MM.yyyy hh:mm. Некорректные даты не разрешает вводить сам swagger,
+(!)за исключением времени 24:00(!). Пока это не пофикшено (код статус всё равно 400, но не от меня, а от swagger
+по причине ошибки валидации), но если нужно фиксить, то надо будет подумать.
